force-app/main/default/objects/Parent_Object__c/Parent_Object__c.object-meta.xml
<CustomObject>
    <label>Parent Object</label>
    <nameField>
        <label>Parent Object Text</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parents Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>