force-app/main/default/objects/Parent_Object__c/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Object</label>
    <referenceTo>Child_Object__c</referenceTo>
    <relationshipLabel>Parents Object</relationshipLabel>
    <relationshipName>Parents_Object</relationshipName>
    <type>Lookup</type>
</CustomField>