force-app/main/default/objects/Parent_Object__c/fields/Sum_value_from_childs__c.field-meta.xml
<CustomField>
    <fullName>Sum_value_from_childs__c</fullName>
    <label>Sum value from childs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>