force-app/main/default/objects/Parent_Object__c/listViews/Parent_View.listView-meta.xml
<ListView>
    <fullName>Parent_View</fullName>
    <columns>NAME</columns>
    <columns>Date_and_time__c</columns>
    <columns>Size__c</columns>
    <columns>Sum_value_from_childs__c</columns>
    <filterScope>Mine</filterScope>
    <label>Parent View</label>
</ListView>